# PensieveBot

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pensieve_bot.py  requirements.txt  setup.cfg  stt-exploratory-telebot.ipynb
src/: __init__.py  constants.py  run.py  stt.py  tbot.py
