# pytest pycodestyle configuration
[tool:pytest]
# Function starting with the following pattern are considered for test cases.
python_functions=test_

[pylama]
linters = pycodestyle,pyflakes
ignore = D203,

# pytest pycodestyle configuration
codestyle_max_line_length = 88
codestyle_ignore = E302 W503 E203 E501 E265 E402 E251 E211
codestyle_exclude =
    docs/core/conf.py
    docs/nlu/conf.py
    rasa/core/policies/tf_utils.py
    rasa/core/policies/__init__.py
filterwarnings =
    ignore::ResourceWarning:ruamel[.*]

log_cli = true
log_cli_level = WARNING


[pylama:pycodestyle]
max-line-length = 88
exclude = ../models,./logs,./data,./checkpoints

[pycodestyle]
max-line-length = 88
exclude = ../models,./logs,./data,./checkpoints

[flake8]
max-line-length = 88
ignore = W503, E121, E126, E211, E225, E501, E203, E402, F811

[mypy]
ignore_missing_imports = False

# mypy is having issues finding stubs for the following libraries:
[mypy-requests.*]
ignore_missing_imports = True
[mypy-tabulate.*]
ignore_missing_imports = True
[mypy-dateutil.*]
ignore_missing_imports = True
[mypy-aiofiles.*]
ignore_missing_imports = True
[mypy-redis.*]
ignore_missing_imports = True


[isort]
line_length = 88
use_parentheses = True
include_trailing_comma = True
multi_line_output = 3
force_single_line = True

[metadata]
description-file = README.md
license_file = LICENSE.txt
